prevent caching and look up rank diffs

--- a/python/email-participants.ipynb
+++ b/python/email-participants.ipynb
@@ -2,13 +2,251 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "b3bcd48f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"../2024/leaderboard/data/submissions2024AllColumns.csv\")"
+    "df = pd.read_csv(\"../2024/leaderboard/data/submissions2024.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4b49258a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['diff'] = df['round_2_rank'] - df['round_1_rank']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "89dfad88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>leaderboardAlias</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>round_1_score</th>\n",
+       "      <th>round_2_score</th>\n",
+       "      <th>kendallDistance</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>round_1_rank</th>\n",
+       "      <th>round_2_rank</th>\n",
+       "      <th>diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>Wisdom of the crowd</td>\n",
+       "      <td>hurd,elder,suarez,burgum,hutchinson,scott,chri...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>-19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Karlos A</td>\n",
+       "      <td>hurd,burgum,suarez,elder,haley,pence,ramaswamy...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>-19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>KG</td>\n",
+       "      <td>hurd,elder,suarez,hutchinson,burgum,scott,chri...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>-19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>Josh Bellis</td>\n",
+       "      <td>hurd,elder,suarez,hutchinson,haley,burgum,desa...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>-19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Lucian W</td>\n",
+       "      <td>hurd,scott,suarez,burgum,elder,hutchinson,penc...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>-19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Kerr S</td>\n",
+       "      <td>scott,suarez,ramaswamy,haley,burgum,hurd,hutch...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>Nathaniel S</td>\n",
+       "      <td>suarez,burgum,elder,hutchinson,hurd,haley,rama...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>Matt Nowling</td>\n",
+       "      <td>suarez,burgum,hutchinson,haley,hurd,elder,scot...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Jake D</td>\n",
+       "      <td>suarez,burgum,hutchinson,elder,hurd,christie,h...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Devin Meenan</td>\n",
+       "      <td>suarez,ramaswamy,elder,burgum,desantis,hutchin...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>47.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>79 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       leaderboardAlias                                         prediction  \\\n",
+       "78  Wisdom of the crowd  hurd,elder,suarez,burgum,hutchinson,scott,chri...   \n",
+       "16             Karlos A  hurd,burgum,suarez,elder,haley,pence,ramaswamy...   \n",
+       "72                   KG  hurd,elder,suarez,hutchinson,burgum,scott,chri...   \n",
+       "68          Josh Bellis  hurd,elder,suarez,hutchinson,haley,burgum,desa...   \n",
+       "29             Lucian W  hurd,scott,suarez,burgum,elder,hutchinson,penc...   \n",
+       "..                  ...                                                ...   \n",
+       "33               Kerr S  scott,suarez,ramaswamy,haley,burgum,hurd,hutch...   \n",
+       "63          Nathaniel S  suarez,burgum,elder,hutchinson,hurd,haley,rama...   \n",
+       "56         Matt Nowling  suarez,burgum,hutchinson,haley,hurd,elder,scot...   \n",
+       "32               Jake D  suarez,burgum,hutchinson,elder,hurd,christie,h...   \n",
+       "11         Devin Meenan  suarez,ramaswamy,elder,burgum,desantis,hutchin...   \n",
+       "\n",
+       "    round_1_score  round_2_score  kendallDistance  rank  round_1_rank  \\\n",
+       "78              2              2                2  15.0          34.0   \n",
+       "16              2              2                2  15.0          34.0   \n",
+       "72              2              2                2  15.0          34.0   \n",
+       "68              2              2                2  15.0          34.0   \n",
+       "29              2              2                2  15.0          34.0   \n",
+       "..            ...            ...              ...   ...           ...   \n",
+       "33              1              5                5  48.0          20.0   \n",
+       "63              0              3                3  30.0           1.0   \n",
+       "56              0              3                3  30.0           1.0   \n",
+       "32              0              3                3  30.0           1.0   \n",
+       "11              0              5                5  48.0           1.0   \n",
+       "\n",
+       "    round_2_rank  diff  \n",
+       "78          15.0 -19.0  \n",
+       "16          15.0 -19.0  \n",
+       "72          15.0 -19.0  \n",
+       "68          15.0 -19.0  \n",
+       "29          15.0 -19.0  \n",
+       "..           ...   ...  \n",
+       "33          48.0  28.0  \n",
+       "63          30.0  29.0  \n",
+       "56          30.0  29.0  \n",
+       "32          30.0  29.0  \n",
+       "11          48.0  47.0  \n",
+       "\n",
+       "[79 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values('diff')"
    ]
   }
  ],
