--- a/python/contest-scoring.ipynb
+++ b/python/contest-scoring.ipynb
@@ -184,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "8"
       ]
      },
      "execution_count": 2,
@@ -194,7 +194,7 @@
    ],
    "source": [
     "averageOrder = ['hurd','elder','suarez','burgum','hutchinson','scott','christie','ramaswamy','haley','pence','desantis','trump']\n",
-    "dropOutOrder = ['suarez', 'hurd']\n",
+    "dropOutOrder = ['suarez', 'hurd', 'elder','pence']\n",
     "\n",
     "partialScoring(dropOutOrder, averageOrder)"
    ]
@@ -230,10 +230,14 @@
        "      <th>prediction</th>\n",
        "      <th>round_1_score</th>\n",
        "      <th>round_2_score</th>\n",
+       "      <th>round_3_score</th>\n",
+       "      <th>round_4_score</th>\n",
        "      <th>kendallDistance</th>\n",
        "      <th>rank</th>\n",
        "      <th>round_1_rank</th>\n",
        "      <th>round_2_rank</th>\n",
+       "      <th>round_3_rank</th>\n",
+       "      <th>round_4_rank</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -244,9 +248,13 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>28.0</td>\n",
        "      <td>34.0</td>\n",
        "      <td>15.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>28.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -256,11 +264,14 @@
        "       leaderboardAlias                                         prediction  \\\n",
        "78  Wisdom of the crowd  hurd,elder,suarez,burgum,hutchinson,scott,chri...   \n",
        "\n",
-       "    round_1_score  round_2_score  kendallDistance  rank  round_1_rank  \\\n",
-       "78              2              2                2  15.0          34.0   \n",
+       "    round_1_score  round_2_score  round_3_score  round_4_score  \\\n",
+       "78              2              2              2              8   \n",
        "\n",
-       "    round_2_rank  \n",
-       "78          15.0  "
+       "    kendallDistance  rank  round_1_rank  round_2_rank  round_3_rank  \\\n",
+       "78                8  28.0          34.0          15.0          10.0   \n",
+       "\n",
+       "    round_4_rank  \n",
+       "78          28.0  "
       ]
      },
      "metadata": {},
