--- a/python/contest-data-analysis.ipynb
+++ b/python/contest-data-analysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4f9d3be1",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b181082d",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5c47fa39",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "70f5c695",
    "metadata": {},
    "outputs": [
@@ -233,11 +233,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "66.66666666666666\n",
-      "64.1025641025641\n",
-      "60.256410256410255\n",
-      "56.41025641025641\n",
-      "19.230769230769234\n"
+      "67.08860759493672\n",
+      "64.55696202531645\n",
+      "60.75949367088608\n",
+      "56.9620253164557\n",
+      "20.253164556962027\n"
      ]
     }
    ],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "e277752c",
    "metadata": {},
    "outputs": [
@@ -266,17 +266,17 @@
      "text": [
       "% of respondents who think candidate will be one of the first three to drop out\n",
       " \n",
-      "ramaswamy: 15.384615384615385\n",
-      "hurd: 64.1025641025641\n",
-      "hutchinson: 34.61538461538461\n",
-      "elder: 60.256410256410255\n",
-      "pence: 1.282051282051282\n",
-      "christie: 11.538461538461538\n",
-      "burgum: 39.743589743589745\n",
-      "scott: 11.538461538461538\n",
-      "haley: 3.8461538461538463\n",
-      "suarez: 56.41025641025641\n",
-      "trump: 1.282051282051282\n",
+      "ramaswamy: 15.18987341772152\n",
+      "hurd: 64.55696202531645\n",
+      "hutchinson: 34.177215189873415\n",
+      "elder: 60.75949367088608\n",
+      "pence: 1.2658227848101267\n",
+      "christie: 11.39240506329114\n",
+      "burgum: 39.24050632911392\n",
+      "scott: 11.39240506329114\n",
+      "haley: 3.79746835443038\n",
+      "suarez: 56.9620253164557\n",
+      "trump: 1.2658227848101267\n",
       "desantis: 0.0\n"
      ]
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "d277ee39",
    "metadata": {},
    "outputs": [
@@ -332,62 +332,62 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>trump</td>\n",
-       "      <td>1.453520</td>\n",
+       "      <td>1.444865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>desantis</td>\n",
-       "      <td>1.649630</td>\n",
+       "      <td>1.642308</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>hurd</td>\n",
-       "      <td>1.668547</td>\n",
+       "      <td>1.674406</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>pence</td>\n",
-       "      <td>1.877580</td>\n",
+       "      <td>1.877194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>hutchinson</td>\n",
-       "      <td>2.007976</td>\n",
+       "      <td>1.996264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>elder</td>\n",
-       "      <td>2.079185</td>\n",
+       "      <td>2.070645</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>haley</td>\n",
-       "      <td>2.147298</td>\n",
+       "      <td>2.139488</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>burgum</td>\n",
-       "      <td>2.416539</td>\n",
+       "      <td>2.401314</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>scott</td>\n",
-       "      <td>2.601167</td>\n",
+       "      <td>2.586824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>christie</td>\n",
-       "      <td>2.615816</td>\n",
+       "      <td>2.599153</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>suarez</td>\n",
-       "      <td>2.621951</td>\n",
+       "      <td>2.606386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ramaswamy</td>\n",
-       "      <td>3.131936</td>\n",
+       "      <td>3.112204</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -395,18 +395,18 @@
       ],
       "text/plain": [
        "     candidate      stdv\n",
-       "10       trump  1.453520\n",
-       "11    desantis  1.649630\n",
-       "1         hurd  1.668547\n",
-       "4        pence  1.877580\n",
-       "2   hutchinson  2.007976\n",
-       "3        elder  2.079185\n",
-       "8        haley  2.147298\n",
-       "6       burgum  2.416539\n",
-       "7        scott  2.601167\n",
-       "5     christie  2.615816\n",
-       "9       suarez  2.621951\n",
-       "0    ramaswamy  3.131936"
+       "10       trump  1.444865\n",
+       "11    desantis  1.642308\n",
+       "1         hurd  1.674406\n",
+       "4        pence  1.877194\n",
+       "2   hutchinson  1.996264\n",
+       "3        elder  2.070645\n",
+       "8        haley  2.139488\n",
+       "6       burgum  2.401314\n",
+       "7        scott  2.586824\n",
+       "5     christie  2.599153\n",
+       "9       suarez  2.606386\n",
+       "0    ramaswamy  3.112204"
       ]
      },
      "metadata": {},
@@ -518,6 +518,25 @@
     "\n",
     "# 64% predicted he'd drop out in the first 3\n",
     "print(len(candidatePositions[candidatePositions['hurd'] <= 3]) / len(df) * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ac2307bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48.10126582278481\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 48% predicted he'd drop out 4th, 5th, or 6th\n",
+    "print(len(candidatePositions[(candidatePositions['scott'] >= 5) & (candidatePositions['scott'] <= 8)]) / len(df) * 100)"
    ]
   },
   {
