--- a/python/contest-data-analysis.ipynb
+++ b/python/contest-data-analysis.ipynb
@@ -426,6 +426,111 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7a0770d6",
+   "metadata": {},
+   "source": [
+    "## Who do we expect to drop next?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5368b940",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'ramaswamy': 10,\n",
+       "         'burgum': 39,\n",
+       "         'hutchinson': 25,\n",
+       "         'christie': 3,\n",
+       "         'haley': 1,\n",
+       "         'trump': 1})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4936708860759494\n",
+      "0.31645569620253167\n",
+      "0.12658227848101267\n",
+      " \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'ramaswamy': 15,\n",
+       "         'hutchinson': 52,\n",
+       "         'haley': 3,\n",
+       "         'christie': 7,\n",
+       "         'trump': 1,\n",
+       "         'desantis': 1})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6582278481012658\n",
+      "0.189873417721519\n",
+      "0.08860759493670886\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "# before Burgum dropped\n",
+    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott']\n",
+    "whoNext = []\n",
+    "\n",
+    "for i in df.index:\n",
+    "    prediction = df['prediction'][i].split(\",\")[:-1]\n",
+    "    for i, candidate in enumerate(prediction):\n",
+    "        if candidate not in dropOutOrder:\n",
+    "            whoNext.append(candidate)\n",
+    "            break\n",
+    "\n",
+    "counts = Counter(whoNext)\n",
+    "display(counts)\n",
+    "\n",
+    "print(counts['burgum'] / len(df))\n",
+    "print(counts['hutchinson'] / len(df))\n",
+    "print(counts['ramaswamy'] / len(df))\n",
+    "\n",
+    "print(\" \")\n",
+    "\n",
+    "# after Burgum dropped\n",
+    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott', 'burgum']\n",
+    "whoNext = []\n",
+    "\n",
+    "for i in df.index:\n",
+    "    prediction = df['prediction'][i].split(\",\")[:-1]\n",
+    "    for i, candidate in enumerate(prediction):\n",
+    "        if candidate not in dropOutOrder:\n",
+    "            whoNext.append(candidate)\n",
+    "            break\n",
+    "\n",
+    "counts = Counter(whoNext)\n",
+    "display(counts)\n",
+    "\n",
+    "print(counts['hutchinson'] / len(df))\n",
+    "print(counts['ramaswamy'] / len(df))\n",
+    "print(counts['christie'] / len(df))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9dfef753",
    "metadata": {},
    "source": [
@@ -523,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ac2307bb",
+   "id": "25bfae71",
    "metadata": {},
    "outputs": [
     {
