--- a/python/contest-scoring.ipynb
+++ b/python/contest-scoring.ipynb
@@ -194,7 +194,7 @@
    ],
    "source": [
     "averageOrder = ['hurd','elder','suarez','burgum','hutchinson','scott','christie','ramaswamy','haley','pence','desantis','trump']\n",
-    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott']\n",
+    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott','burgum']\n",
     "\n",
     "partialScoring(dropOutOrder, averageOrder)"
    ]
@@ -233,6 +233,7 @@
        "      <th>round_3_score</th>\n",
        "      <th>round_4_score</th>\n",
        "      <th>round_5_score</th>\n",
+       "      <th>round_6_score</th>\n",
        "      <th>kendallDistance</th>\n",
        "      <th>rank</th>\n",
        "      <th>round_1_rank</th>\n",
@@ -240,6 +241,7 @@
        "      <th>round_3_rank</th>\n",
        "      <th>round_4_rank</th>\n",
        "      <th>round_5_rank</th>\n",
+       "      <th>round_6_rank</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -253,12 +255,14 @@
        "      <td>8</td>\n",
        "      <td>10</td>\n",
        "      <td>10</td>\n",
-       "      <td>20.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>34.0</td>\n",
        "      <td>15.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>28.0</td>\n",
        "      <td>20.0</td>\n",
+       "      <td>12.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -271,11 +275,11 @@
        "    round_1_score  round_2_score  round_3_score  round_4_score  round_5_score  \\\n",
        "78              2              2              2              8             10   \n",
        "\n",
-       "    kendallDistance  rank  round_1_rank  round_2_rank  round_3_rank  \\\n",
-       "78               10  20.0          34.0          15.0          10.0   \n",
+       "    round_6_score  kendallDistance  rank  round_1_rank  round_2_rank  \\\n",
+       "78             10               10  12.0          34.0          15.0   \n",
        "\n",
-       "    round_4_rank  round_5_rank  \n",
-       "78          28.0          20.0  "
+       "    round_3_rank  round_4_rank  round_5_rank  round_6_rank  \n",
+       "78          10.0          28.0          20.0          12.0  "
       ]
      },
      "metadata": {},
