--- a/python/contest-data-analysis.ipynb
+++ b/python/contest-data-analysis.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2020 Democratic Primary Drop Out Predictions Scoring Formulas\n",
     "# Author: Oliver Gladfelter\n",
     "# Date: Aug 22, 2023"
    ]
@@ -426,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a0770d6",
+   "id": "5b9d3752",
    "metadata": {},
    "source": [
     "## Who do we expect to drop next?"
@@ -434,34 +433,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "5368b940",
+   "execution_count": 5,
+   "id": "e1183728",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'ramaswamy': 10,\n",
-       "         'burgum': 39,\n",
-       "         'hutchinson': 25,\n",
-       "         'christie': 3,\n",
-       "         'haley': 1,\n",
-       "         'trump': 1})"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4936708860759494\n",
-      "0.31645569620253167\n",
-      "0.12658227848101267\n",
-      " \n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -480,9 +455,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.08860759493670886\n",
       "0.6582278481012658\n",
       "0.189873417721519\n",
-      "0.08860759493670886\n"
+      "0.0379746835443038\n",
+      " \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'ramaswamy': 15,\n",
+       "         'hutchinson': 58,\n",
+       "         'haley': 4,\n",
+       "         'trump': 1,\n",
+       "         'desantis': 1})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7341772151898734\n",
+      "0.189873417721519\n",
+      "0.05063291139240506\n"
      ]
     }
    ],
@@ -490,27 +489,7 @@
     "from collections import Counter\n",
     "\n",
     "\n",
-    "# before Burgum dropped\n",
-    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott']\n",
-    "whoNext = []\n",
-    "\n",
-    "for i in df.index:\n",
-    "    prediction = df['prediction'][i].split(\",\")[:-1]\n",
-    "    for i, candidate in enumerate(prediction):\n",
-    "        if candidate not in dropOutOrder:\n",
-    "            whoNext.append(candidate)\n",
-    "            break\n",
-    "\n",
-    "counts = Counter(whoNext)\n",
-    "display(counts)\n",
-    "\n",
-    "print(counts['burgum'] / len(df))\n",
-    "print(counts['hutchinson'] / len(df))\n",
-    "print(counts['ramaswamy'] / len(df))\n",
-    "\n",
-    "print(\" \")\n",
-    "\n",
-    "# after Burgum dropped\n",
+    "# before Christie dropped\n",
     "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott', 'burgum']\n",
     "whoNext = []\n",
     "\n",
@@ -524,9 +503,30 @@
     "counts = Counter(whoNext)\n",
     "display(counts)\n",
     "\n",
+    "print(counts['christie'] / len(df))\n",
     "print(counts['hutchinson'] / len(df))\n",
     "print(counts['ramaswamy'] / len(df))\n",
-    "print(counts['christie'] / len(df))"
+    "print(counts['haley'] / len(df))\n",
+    "\n",
+    "print(\" \")\n",
+    "\n",
+    "# after Christie dropped\n",
+    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott', 'burgum', 'christie']\n",
+    "whoNext = []\n",
+    "\n",
+    "for i in df.index:\n",
+    "    prediction = df['prediction'][i].split(\",\")[:-1]\n",
+    "    for i, candidate in enumerate(prediction):\n",
+    "        if candidate not in dropOutOrder:\n",
+    "            whoNext.append(candidate)\n",
+    "            break\n",
+    "\n",
+    "counts = Counter(whoNext)\n",
+    "display(counts)\n",
+    "\n",
+    "print(counts['hutchinson'] / len(df))\n",
+    "print(counts['ramaswamy'] / len(df))\n",
+    "print(counts['haley'] / len(df))"
    ]
   },
   {
