--- a/python/contest-scoring.ipynb
+++ b/python/contest-scoring.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4c8e11ca",
    "metadata": {
     "scrolled": true
@@ -184,24 +184,24 @@
     {
      "data": {
       "text/plain": [
-       "11"
+       "12"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "averageOrder = ['hurd','elder','suarez','burgum','hutchinson','scott','christie','ramaswamy','haley','pence','desantis','trump']\n",
-    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott','burgum','christie']\n",
+    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott','burgum','christie','ramaswamy','hutchinson']\n",
     "\n",
     "partialScoring(dropOutOrder, averageOrder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "298668f6",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,8 @@
        "      <th>round_5_score</th>\n",
        "      <th>round_6_score</th>\n",
        "      <th>round_7_score</th>\n",
-       "      <th>kendallDistance</th>\n",
+       "      <th>round_8_score</th>\n",
+       "      <th>...</th>\n",
        "      <th>rank</th>\n",
        "      <th>round_1_rank</th>\n",
        "      <th>round_2_rank</th>\n",
@@ -244,6 +245,8 @@
        "      <th>round_5_rank</th>\n",
        "      <th>round_6_rank</th>\n",
        "      <th>round_7_rank</th>\n",
+       "      <th>round_8_rank</th>\n",
+       "      <th>round_9_rank</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -258,8 +261,9 @@
        "      <td>10</td>\n",
        "      <td>10</td>\n",
        "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>34.0</td>\n",
        "      <td>15.0</td>\n",
        "      <td>10.0</td>\n",
@@ -267,9 +271,12 @@
        "      <td>20.0</td>\n",
        "      <td>12.0</td>\n",
        "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -279,14 +286,16 @@
        "    round_1_score  round_2_score  round_3_score  round_4_score  round_5_score  \\\n",
        "78              2              2              2              8             10   \n",
        "\n",
-       "    round_6_score  round_7_score  kendallDistance  rank  round_1_rank  \\\n",
-       "78             10             11               11   9.0          34.0   \n",
+       "    round_6_score  round_7_score  round_8_score  ...  rank  round_1_rank  \\\n",
+       "78             10             11             12  ...   6.0          34.0   \n",
        "\n",
        "    round_2_rank  round_3_rank  round_4_rank  round_5_rank  round_6_rank  \\\n",
        "78          15.0          10.0          28.0          20.0          12.0   \n",
        "\n",
-       "    round_7_rank  \n",
-       "78           9.0  "
+       "    round_7_rank  round_8_rank  round_9_rank  \n",
+       "78           9.0           6.0           6.0  \n",
+       "\n",
+       "[1 rows x 22 columns]"
       ]
      },
      "metadata": {},
@@ -319,383 +328,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "90ca10b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"../2024/leaderboard/data/submissions2024.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "6d475b08",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>leaderboardAlias</th>\n",
-       "      <th>prediction</th>\n",
-       "      <th>round_1_score</th>\n",
-       "      <th>round_2_score</th>\n",
-       "      <th>round_3_score</th>\n",
-       "      <th>round_4_score</th>\n",
-       "      <th>round_5_score</th>\n",
-       "      <th>round_6_score</th>\n",
-       "      <th>round_7_score</th>\n",
-       "      <th>kendallDistance</th>\n",
-       "      <th>rank</th>\n",
-       "      <th>round_1_rank</th>\n",
-       "      <th>round_2_rank</th>\n",
-       "      <th>round_3_rank</th>\n",
-       "      <th>round_4_rank</th>\n",
-       "      <th>round_5_rank</th>\n",
-       "      <th>round_6_rank</th>\n",
-       "      <th>round_7_rank</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>djbayko</td>\n",
-       "      <td>suarez,elder,hurd,burgum,hutchinson,pence,chri...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Katie R</td>\n",
-       "      <td>elder,suarez,hurd,burgum,hutchinson,scott,penc...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>Karla A</td>\n",
-       "      <td>suarez,scott,burgum,hurd,elder,hutchinson,penc...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Keerit K</td>\n",
-       "      <td>hurd,suarez,burgum,elder,scott,hutchinson,chri...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Lucian W</td>\n",
-       "      <td>hurd,scott,suarez,burgum,elder,hutchinson,penc...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Amelia Mac</td>\n",
-       "      <td>ramaswamy,hurd,hutchinson,elder,pence,christie...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>12</td>\n",
-       "      <td>14</td>\n",
-       "      <td>18</td>\n",
-       "      <td>21</td>\n",
-       "      <td>23</td>\n",
-       "      <td>23</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>72.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Corbin Smith</td>\n",
-       "      <td>burgum,ramaswamy,elder,hurd,haley,suarez,chris...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "      <td>15</td>\n",
-       "      <td>22</td>\n",
-       "      <td>22</td>\n",
-       "      <td>24</td>\n",
-       "      <td>24</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>76.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>Phenom Euphoria</td>\n",
-       "      <td>burgum,elder,hutchinson,ramaswamy,hurd,scott,h...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>11</td>\n",
-       "      <td>12</td>\n",
-       "      <td>19</td>\n",
-       "      <td>22</td>\n",
-       "      <td>22</td>\n",
-       "      <td>26</td>\n",
-       "      <td>26</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>77.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>Susan  S</td>\n",
-       "      <td>hutchinson,christie,scott,elder,hurd,ramaswamy...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>13</td>\n",
-       "      <td>19</td>\n",
-       "      <td>21</td>\n",
-       "      <td>27</td>\n",
-       "      <td>28</td>\n",
-       "      <td>28</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>78.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>Mira P</td>\n",
-       "      <td>trump,hutchinson,scott,christie,ramaswamy,hurd...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>15</td>\n",
-       "      <td>23</td>\n",
-       "      <td>30</td>\n",
-       "      <td>32</td>\n",
-       "      <td>37</td>\n",
-       "      <td>39</td>\n",
-       "      <td>39</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>79.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>79 rows × 18 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   leaderboardAlias                                         prediction  \\\n",
-       "41          djbayko  suarez,elder,hurd,burgum,hutchinson,pence,chri...   \n",
-       "1           Katie R  elder,suarez,hurd,burgum,hutchinson,scott,penc...   \n",
-       "76          Karla A  suarez,scott,burgum,hurd,elder,hutchinson,penc...   \n",
-       "7          Keerit K  hurd,suarez,burgum,elder,scott,hutchinson,chri...   \n",
-       "29         Lucian W  hurd,scott,suarez,burgum,elder,hutchinson,penc...   \n",
-       "..              ...                                                ...   \n",
-       "0        Amelia Mac  ramaswamy,hurd,hutchinson,elder,pence,christie...   \n",
-       "13     Corbin Smith  burgum,ramaswamy,elder,hurd,haley,suarez,chris...   \n",
-       "69  Phenom Euphoria  burgum,elder,hutchinson,ramaswamy,hurd,scott,h...   \n",
-       "44         Susan  S  hutchinson,christie,scott,elder,hurd,ramaswamy...   \n",
-       "67           Mira P  trump,hutchinson,scott,christie,ramaswamy,hurd...   \n",
-       "\n",
-       "    round_1_score  round_2_score  round_3_score  round_4_score  round_5_score  \\\n",
-       "41              0              1              1              3              6   \n",
-       "1               1              2              2              5              7   \n",
-       "76              0              2              4              7              7   \n",
-       "7               1              1              2              7              8   \n",
-       "29              2              2              4              7              7   \n",
-       "..            ...            ...            ...            ...            ...   \n",
-       "0               9             10             12             14             18   \n",
-       "13              5              8             10             15             22   \n",
-       "69              7             11             12             19             22   \n",
-       "44              6             10             13             19             21   \n",
-       "67             10             15             23             30             32   \n",
-       "\n",
-       "    round_6_score  round_7_score  kendallDistance  rank  round_1_rank  \\\n",
-       "41              6              7                7   1.0           1.0   \n",
-       "1               7              8                8   2.0          20.0   \n",
-       "76              7              8                8   2.0           1.0   \n",
-       "7               8              9                9   4.0          20.0   \n",
-       "29              7             10               10   5.0          34.0   \n",
-       "..            ...            ...              ...   ...           ...   \n",
-       "0              21             23               23  72.0          77.0   \n",
-       "13             22             24               24  76.0          60.0   \n",
-       "69             22             26               26  77.0          74.0   \n",
-       "44             27             28               28  78.0          67.0   \n",
-       "67             37             39               39  79.0          78.0   \n",
-       "\n",
-       "    round_2_rank  round_3_rank  round_4_rank  round_5_rank  round_6_rank  \\\n",
-       "41           5.0           4.0           2.0           1.0           1.0   \n",
-       "1           15.0          10.0           8.0           2.0           2.0   \n",
-       "76          15.0          30.0          21.0           2.0           2.0   \n",
-       "7            5.0          10.0          21.0           7.0           6.0   \n",
-       "29          15.0          30.0          21.0           2.0           2.0   \n",
-       "..           ...           ...           ...           ...           ...   \n",
-       "0           71.0          71.0          61.0          68.0          72.0   \n",
-       "13          68.0          66.0          66.0          77.0          75.0   \n",
-       "69          75.0          71.0          75.0          77.0          75.0   \n",
-       "44          71.0          74.0          75.0          74.0          78.0   \n",
-       "67          79.0          79.0          79.0          79.0          79.0   \n",
-       "\n",
-       "    round_7_rank  \n",
-       "41           1.0  \n",
-       "1            2.0  \n",
-       "76           2.0  \n",
-       "7            4.0  \n",
-       "29           5.0  \n",
-       "..           ...  \n",
-       "0           72.0  \n",
-       "13          76.0  \n",
-       "69          77.0  \n",
-       "44          78.0  \n",
-       "67          79.0  \n",
-       "\n",
-       "[79 rows x 18 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.sort_values('round_7_rank')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8214e54a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
