--- a/python/contest-data-analysis.ipynb
+++ b/python/contest-data-analysis.ipynb
@@ -433,19 +433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e1183728",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'ramaswamy': 15,\n",
-       "         'hutchinson': 52,\n",
-       "         'haley': 3,\n",
-       "         'christie': 7,\n",
-       "         'trump': 1,\n",
-       "         'desantis': 1})"
+       "Counter({'hutchinson': 66, 'haley': 9, 'desantis': 2, 'trump': 2})"
       ]
      },
      "metadata": {},
@@ -455,21 +450,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.08860759493670886\n",
-      "0.6582278481012658\n",
-      "0.189873417721519\n",
-      "0.0379746835443038\n",
+      "0.8354430379746836\n",
+      "0.02531645569620253\n",
+      "0.11392405063291139\n",
+      "0.02531645569620253\n",
       " \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Counter({'ramaswamy': 15,\n",
-       "         'hutchinson': 58,\n",
-       "         'haley': 4,\n",
-       "         'trump': 1,\n",
-       "         'desantis': 1})"
+       "Counter({'haley': 69, 'desantis': 8, 'trump': 2})"
       ]
      },
      "metadata": {},
@@ -479,9 +470,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7341772151898734\n",
-      "0.189873417721519\n",
-      "0.05063291139240506\n"
+      "0.10126582278481013\n",
+      "0.8734177215189873\n",
+      "0.02531645569620253\n"
      ]
     }
    ],
@@ -489,8 +480,8 @@
     "from collections import Counter\n",
     "\n",
     "\n",
-    "# before Christie dropped\n",
-    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott', 'burgum']\n",
+    "# before Asa dropped\n",
+    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott', 'burgum', 'christie', 'ramaswamy']\n",
     "whoNext = []\n",
     "\n",
     "for i in df.index:\n",
@@ -503,15 +494,15 @@
     "counts = Counter(whoNext)\n",
     "display(counts)\n",
     "\n",
-    "print(counts['christie'] / len(df))\n",
     "print(counts['hutchinson'] / len(df))\n",
-    "print(counts['ramaswamy'] / len(df))\n",
+    "print(counts['desantis'] / len(df))\n",
     "print(counts['haley'] / len(df))\n",
+    "print(counts['trump'] / len(df))\n",
     "\n",
     "print(\" \")\n",
     "\n",
-    "# after Christie dropped\n",
-    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott', 'burgum', 'christie']\n",
+    "# after Asa dropped\n",
+    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott', 'burgum', 'christie', 'ramaswamy', 'hutchinson']\n",
     "whoNext = []\n",
     "\n",
     "for i in df.index:\n",
@@ -524,9 +515,9 @@
     "counts = Counter(whoNext)\n",
     "display(counts)\n",
     "\n",
-    "print(counts['hutchinson'] / len(df))\n",
-    "print(counts['ramaswamy'] / len(df))\n",
-    "print(counts['haley'] / len(df))"
+    "print(counts['desantis'] / len(df))\n",
+    "print(counts['haley'] / len(df))\n",
+    "print(counts['trump'] / len(df))"
    ]
   },
   {
