--- a/python/contest-scoring.ipynb
+++ b/python/contest-scoring.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "4c8e11ca",
    "metadata": {
     "scrolled": true
@@ -184,24 +184,24 @@
     {
      "data": {
       "text/plain": [
-       "12"
+       "13"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "averageOrder = ['hurd','elder','suarez','burgum','hutchinson','scott','christie','ramaswamy','haley','pence','desantis','trump']\n",
-    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott','burgum','christie','ramaswamy','hutchinson']\n",
+    "dropOutOrder = ['suarez', 'hurd', 'elder','pence','scott','burgum','christie','ramaswamy','hutchinson','desantis']\n",
     "\n",
     "partialScoring(dropOutOrder, averageOrder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "298668f6",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,6 @@
        "      <th>round_7_score</th>\n",
        "      <th>round_8_score</th>\n",
        "      <th>...</th>\n",
-       "      <th>rank</th>\n",
        "      <th>round_1_rank</th>\n",
        "      <th>round_2_rank</th>\n",
        "      <th>round_3_rank</th>\n",
@@ -247,6 +246,7 @@
        "      <th>round_7_rank</th>\n",
        "      <th>round_8_rank</th>\n",
        "      <th>round_9_rank</th>\n",
+       "      <th>round_10_rank</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -263,7 +263,6 @@
        "      <td>11</td>\n",
        "      <td>12</td>\n",
        "      <td>...</td>\n",
-       "      <td>6.0</td>\n",
        "      <td>34.0</td>\n",
        "      <td>15.0</td>\n",
        "      <td>10.0</td>\n",
@@ -273,10 +272,11 @@
        "      <td>9.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 22 columns</p>\n",
+       "<p>1 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -286,16 +286,16 @@
        "    round_1_score  round_2_score  round_3_score  round_4_score  round_5_score  \\\n",
        "78              2              2              2              8             10   \n",
        "\n",
-       "    round_6_score  round_7_score  round_8_score  ...  rank  round_1_rank  \\\n",
-       "78             10             11             12  ...   6.0          34.0   \n",
+       "    round_6_score  round_7_score  round_8_score  ...  round_1_rank  \\\n",
+       "78             10             11             12  ...          34.0   \n",
        "\n",
        "    round_2_rank  round_3_rank  round_4_rank  round_5_rank  round_6_rank  \\\n",
        "78          15.0          10.0          28.0          20.0          12.0   \n",
        "\n",
-       "    round_7_rank  round_8_rank  round_9_rank  \n",
-       "78           9.0           6.0           6.0  \n",
+       "    round_7_rank  round_8_rank  round_9_rank  round_10_rank  \n",
+       "78           9.0           6.0           6.0            6.0  \n",
        "\n",
-       "[1 rows x 22 columns]"
+       "[1 rows x 24 columns]"
       ]
      },
      "metadata": {},
@@ -328,13 +328,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "90ca10b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"../2024/leaderboard/data/submissions2024.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "beb8ae65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42.30769230769231"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "33 / (len(df) - 1) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "798e71f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.256410256410255"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8 / (len(df) - 1) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c19d3ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
