--- a/python/contest-data-analysis.ipynb
+++ b/python/contest-data-analysis.ipynb
@@ -636,14 +636,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "21b7b996",
-   "metadata": {},
-   "source": [
-    "### Hypothetical scenarios for now"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "efe060de",
@@ -665,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "b58195c6",
    "metadata": {},
    "outputs": [
@@ -673,20 +665,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33.33333333333333\n",
-      "46.15384615384615\n",
-      "87.17948717948718\n",
-      "97.43589743589743\n"
+      "34.177215189873415\n",
+      "46.835443037974684\n",
+      "87.34177215189874\n",
+      "97.46835443037975\n"
      ]
     }
    ],
    "source": [
-    "# 33% predicted Haley would be in the final 4\n",
+    "# 34% predicted Haley would be in the final 4\n",
     "print(len(candidatePositions[((candidatePositions['haley'] >= 9))]) / n * 100)\n",
-    "\n",
     "print(len(candidatePositions[((candidatePositions['pence'] >= 9))]) / n * 100)\n",
     "print(len(candidatePositions[((candidatePositions['desantis'] >= 9))]) / n * 100)\n",
     "print(len(candidatePositions[((candidatePositions['trump'] >= 9))]) / n * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cd91b834",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.253164556962027\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(candidatePositions[((candidatePositions['haley'] >= 10))]) / n * 100)"
    ]
   }
  ],
